--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  gsftopk.doc.tar.xz: 8721f232ce3f0992529e227534ec447a4b1bca54
-  gsftopk.tar.xz: dc7259ff91487c4739faa28a12122da0318121f3
+  gsftopk.doc.r52851.tar.xz: 5a22431e8dc0570195d5c096080f0d730840c7a5
+  gsftopk.r52851.tar.xz: 860da6566cc112ef1da5373d37ea4478793ec98c
